ajustando caixinha de dialogo e fonts

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexShakeA.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\EnvMapAnimator.cs" />
     <Compile Include="Assets\Scripts\Tutorial\tronco.cs" />
+    <Compile Include="Assets\Scripts\Hud\DialogueManager.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
